--- a/honor.html
+++ b/honor.html
@@ -22,20 +22,20 @@
 <h1>Tam Le - Honors &amp; Awards</h1>
 </div>
 <ul>
-<li><p>2012 - 2015, PhD Scholarship (Monbukagakusho 123353 - recommended by Kyoto University), <a href="http://www.i.kyoto-u.ac.jp/en/">Graduate School of Informatics, Kyoto University, Japan</a>.</p>
+<li><p>2012 - 2015, PhD Scholarship (Monbukagakusho 123353 - recommended by Kyoto University), <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Graduate School of Informatics, Kyoto University, Japan</a>.</p>
 </li>
-<li><p>2012, PhD Scholarship - Awarded by <a href="http://www.ntu.edu.sg/Pages/default.aspx">Nanyang Technological University, Singapore</a> (declined).</p>
+<li><p>2012, PhD Scholarship - Awarded by <a href="http://www.ntu.edu.sg/Pages/default.aspx" target=&ldquo;blank&rdquo;>Nanyang Technological University, Singapore</a> (declined).</p>
 </li>
-<li><p>2012, Student Scholarship, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12">Machine Learning Summer School (MLSS), Kyoto, Japan</a>.</p>
+<li><p>2012, Student Scholarship, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS), Kyoto, Japan</a>.</p>
 </li>
-<li><p>2011, Student Travel Grant, <a href="http://www.iciar.uwaterloo.ca/iciar11/">International Conference on Image Processing and Recognition (ICIAR)</a>.</p>
+<li><p>2011, Student Travel Grant, <a href="http://www.iciar.uwaterloo.ca/iciar11/" target=&ldquo;blank&rdquo;>International Conference on Image Processing and Recognition (ICIAR)</a>.</p>
 </li>
-<li><p>2011, Student Scholarship, <a href="http://mlss2011.comp.nus.edu.sg/">Machine Learning Summer School (MLSS), Singapore</a>.</p>
+<li><p>2011, Student Scholarship, <a href="http://mlss2011.comp.nus.edu.sg/" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS), Singapore</a>.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-08-10 16:23:11 JST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-05-30 13:29:36 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
