--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 </div>
 <table class="imgtable"><tr><td>
 <a href="TamLe.jpg"><img src="TamLe.jpg" alt="Tam Le" width="150px" height="150px" /></a>&nbsp;</td>
-<td align="left"><p>Postdoctoral Researcher <br />
-<a href="http://www-als.ics.nitech.ac.jp/~takeuchi/">Nagoya Institute of Technology, Japan</a>. <br />
-<a href="http://www.nims.go.jp/eng/">National Institute for Materials Science, Japan</a>. <br /></p>
+<td align="left"><p>Tam Le
+(a.k.a. Le Thanh Tam)
+Postdoctoral Researcher <br />
+<a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>. <br /></p>
 </td></tr></table>
 <p>Research interests: machine learning, convex optimization, parametric optimization, metric learning, kernel methods, geometry-aware learning for histograms, material informatics. <br /></p>
-<p><b>I will leave NITECH/NIMS at the end of August, 2017. So, this site will not be maintained anymore. Please visit my research google site instead: <a href="http://sites.google.com/site/lttamvn/home">http://sites.google.com/site/lttamvn/home</a>.</b><br /></p>
 <h2>Contact</h2>
 <div class="infoblock">
 <div class="blockcontent">
@@ -37,42 +37,42 @@ Building 2, Room 409A, <br />
 Gokiso-cho, Showa-ku, Nagoya, Aichi, 466-8555, Japan.</p>
 </div></div>
 <p>Email: tam.le[<i>at</i>]nitech.ac.jp or lttam.vn[<i>at</i>]gmail.com <br />
-My CV is <a href="https://www.dropbox.com/s/84prl5ncs040nz4/TamLe_CV_2017Apr.pdf?dl=0">here</a> - Updated April, 2017.</p>
+My CV is <a href="https://www.dropbox.com/s/84prl5ncs040nz4/TamLe_CV_2017Apr.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated April, 2017.</p>
 <h2>News</h2>
 <ul>
 <li><p>05-Apr-2017, Our proposal has been accepted by the Grants-in-Aid for Young Scientists (B) as PI (2017-2019).</p>
 </li>
-<li><p>02-Jun-2006, <a href="https://www.dropbox.com/s/o6nrtzh39si8u7p/TamLe_NIMS_June2016.pdf?dl=0">Slide</a> for my talk at NIMS.</p>
+<li><p>02-Jun-2006, <a href="https://www.dropbox.com/s/o6nrtzh39si8u7p/TamLe_NIMS_June2016.pdf?dl=0" target=&ldquo;blank&rdquo;>Slide</a> for my talk at NIMS.</p>
 </li>
-<li><p>01-Jun-2016, Talk at <a href="http://www.nims.go.jp/MII-I/event/h6g4rf000000034y-att/h6g4rf000000036n.pdf">MI2I open seminar series at NIMS, Japan</a>. </p>
+<li><p>01-Jun-2016, Talk at <a href="http://www.nims.go.jp/MII-I/event/h6g4rf000000034y-att/h6g4rf000000036n.pdf" target=&ldquo;blank&rdquo;>MI2I open seminar series at NIMS, Japan</a>. </p>
 </li>
-<li><p>01-Feb-16, start to work as a Postdoctoral Researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/">NITECH</a> and <a href="http://www.nims.go.jp/eng/">NIMS</a>.</p>
+<li><p>01-Feb-16, start to work as a Postdoctoral Researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>NITECH</a> and <a href="http://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>NIMS</a>.</p>
 </li>
-<li><p>01-Jan-16, start to work as an Associate Researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/">NITECH</a>.</p>
+<li><p>01-Jan-16, start to work as an Associate Researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>NITECH</a>.</p>
 </li>
 </ul>
 <h2>Research Support</h2>
 <ul>
-<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html">JSPS grant</a> (Grants-in-Aid for Young Scientists (B) as PI). </p>
+<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS grant</a> (Grants-in-Aid for Young Scientists (B) as PI). </p>
 </li>
 </ul>
 <h2>Education</h2>
 <ul>
-<li><p>10/2012 - 09/2015, Doctor of Informatics (Ph.D) at <a href="http://www.i.kyoto-u.ac.jp/en/">Graduate school of Informatics</a>, <a href="http://www.i.kyoto-u.ac.jp/en/">Kyoto University, Japan</a>. [<a href="http://en.wikipedia.org/wiki/Kyoto_University#Academic_rankings"><b>Ranking</b></a>]</p>
+<li><p>10/2012 - 09/2015, Doctor of Informatics (Ph.D) at <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Graduate school of Informatics</a>, <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>. [<a href="http://en.wikipedia.org/wiki/Kyoto_University#Academic_rankings" target=&ldquo;blank&rdquo;><b>Ranking</b></a>]</p>
 <ul>
-<li><p>Supervisors: <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/cuturi/">Professor <b>Marco</b> <b>Cuturi</b></a>, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html">Professor <b>Akihiro</b> <b>Yamamoto</b></a>.</p>
+<li><p>Supervisors: <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/cuturi/" target=&ldquo;blank&rdquo;>Professor <b>Marco</b> <b>Cuturi</b></a>, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Professor <b>Akihiro</b> <b>Yamamoto</b></a>.</p>
 </li>
-<li><p>Thesis: Geometry-aware learning algorithms for histogram data using adaptive metric embeddings and kernel functions. [<a href="http://repository.kulib.kyoto-u.ac.jp/dspace/bitstream/2433/204594/2/djohk00596.pdf">PDF</a>]</p>
+<li><p>Thesis: Geometry-aware learning algorithms for histogram data using adaptive metric embeddings and kernel functions. [<a href="http://repository.kulib.kyoto-u.ac.jp/dspace/bitstream/2433/204594/2/djohk00596.pdf" target=&ldquo;blank&rdquo;>PDF</a>]</p>
 </li>
 <li><p>I officially received my PhD degree in January, 2016.</p>
 </li></ul>
 </li>
-<li><p>09/2008 - 05/2011, Master of Science (M.Sc) in computer science, <a href="http://www.fit.hcmus.edu.vn/">University of Science, VNU-HCM</a>.</p>
+<li><p>09/2008 - 05/2011, Master of Science (M.Sc) in computer science, <a href="http://www.fit.hcmus.edu.vn/" target=&ldquo;blank&rdquo;>University of Science, VNU-HCM</a>.</p>
 <ul>
 <li><p>Rank: <b>1/100+</b></p>
 </li></ul>
 </li>
-<li><p>09/2004 - 09/2008, Bachelor of Science (B.Sc) in computer science, <a href="http://www.fit.hcmus.edu.vn/">University of Science, VNU-HCM</a> (<b><i>honor</i></b> <b><i>program</i></b>).</p>
+<li><p>09/2004 - 09/2008, Bachelor of Science (B.Sc) in computer science, <a href="http://www.fit.hcmus.edu.vn/" target=&ldquo;blank&rdquo;>University of Science, VNU-HCM</a> (<b><i>honor</i></b> <b><i>program</i></b>).</p>
 <ul>
 <li><p>Rank: <b>3/36</b> (<i>honor</i> <i>program</i>) &amp; <b>3/550+</b> (<i>faculty</i>)</p>
 </li>
@@ -82,45 +82,45 @@ My CV is <a href="https://www.dropbox.com/s/84prl5ncs040nz4/TamLe_CV_2017Apr.pdf
 </ul>
 <h2>Research Experience</h2>
 <ul>
-<li><p>2/2016 - present, Postdoctoral Researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/">Takeuchi-Karasuyama laboratory, Nagoya Institute of Technology, Japan</a>.</p>
+<li><p>2/2016 - present, Postdoctoral Researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Takeuchi-Karasuyama laboratory, Nagoya Institute of Technology, Japan</a>.</p>
 <ul>
-<li><p>Supervisors: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/">Professor Ichiro Takeuchi</a>.</p>
+<li><p>Supervisors: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Professor Ichiro Takeuchi</a>.</p>
 </li></ul>
 </li>
-<li><p>2/2016 - present, Postdoctoral Researcher at <a href="http://www.nims.go.jp/eng/">National Institute for Materials Science, Japan</a>.</p>
+<li><p>2/2016 - present, Postdoctoral Researcher at <a href="http://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>.</p>
 </li>
-<li><p>1/2016, Associate Researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/">Takeuchi-Karasuyama laboratory, Nagoya Institute of Technology, Japan</a>.</p>
+<li><p>1/2016, Associate Researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Takeuchi-Karasuyama laboratory, Nagoya Institute of Technology, Japan</a>.</p>
 <ul>
-<li><p>Supervisors: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/">Professor Ichiro Takeuchi</a>.</p>
+<li><p>Supervisors: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Professor Ichiro Takeuchi</a>.</p>
 </li></ul>
 </li>
-<li><p>10/2015 - 12/2015, Associate Researcher at <a href="http://www.iip.ist.i.kyoto-u.ac.jp/index-e.html">Yamamoto-Cuturi laboratory, Graduate School of Informatics, Kyoto University, Japan</a>.</p>
+<li><p>10/2015 - 12/2015, Associate Researcher at <a href="http://www.iip.ist.i.kyoto-u.ac.jp/index-e.html" target=&ldquo;blank&rdquo;>Yamamoto-Cuturi laboratory, Graduate School of Informatics, Kyoto University, Japan</a>.</p>
 <ul>
-<li><p>Supervisors: <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html">Professor Akihiro Yamamoto</a>, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/cuturi/">Professor Marco Cuturi</a>.</p>
+<li><p>Supervisors: <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Professor Akihiro Yamamoto</a>, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/cuturi/" target=&ldquo;blank&rdquo;>Professor Marco Cuturi</a>.</p>
 </li></ul>
 </li>
-<li><p>01/2014 - 02/2014, Internship student at <a href="http://lear.inrialpes.fr/">Lear, INRIA, Grenoble, France</a>.</p>
+<li><p>01/2014 - 02/2014, Internship student at <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.</p>
 <ul>
-<li><p>Supervisor: <a href="http://www.harchaoui.eu/zaid/en/page.php?category=Bio">Dr. Zaid Harchaoui</a>.</p>
+<li><p>Supervisor: <a href="http://www.harchaoui.eu/zaid/en/page.php?category=Bio" target=&ldquo;blank&rdquo;>Dr. Zaid Harchaoui</a>.</p>
 </li></ul>
 </li>
-<li><p>03/2013, Internship student at <a href="http://lear.inrialpes.fr/">Lear, INRIA, Grenoble, France</a>.</p>
+<li><p>03/2013, Internship student at <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.</p>
 <ul>
-<li><p>Supervisor: <a href="http://www.harchaoui.eu/zaid/en/page.php?category=Bio">Dr. Zaid Harchaoui</a>.</p>
+<li><p>Supervisor: <a href="http://www.harchaoui.eu/zaid/en/page.php?category=Bio" target=&ldquo;blank&rdquo;>Dr. Zaid Harchaoui</a>.</p>
 </li>
 <li><p>Subject: Some methods in optimization and machine learning.</p>
 </li></ul>
 </li>
-<li><p>08/2010 - 02/2011, Internship student at <a href="http://www.nii.ac.jp/en/">National Institute of Informatics, Tokyo, Japan</a>.</p>
+<li><p>08/2010 - 02/2011, Internship student at <a href="http://www.nii.ac.jp/en/" target=&ldquo;blank&rdquo;>National Institute of Informatics, Tokyo, Japan</a>.</p>
 <ul>
-<li><p>Supervisor: <a href="http://www.nii.ac.jp/en/faculty/digital_content/sugimoto_akihiko/">Professor Akihiro Sugimoto</a>, <a href="http://researchmap.jp/yskang/?lang=english">Dr. Yousun Kang</a>.</p>
+<li><p>Supervisor: <a href="http://www.nii.ac.jp/en/faculty/digital_content/sugimoto_akihiko/" target=&ldquo;blank&rdquo;>Professor Akihiro Sugimoto</a>, <a href="http://researchmap.jp/yskang/?lang=english" target=&ldquo;blank&rdquo;>Dr. Yousun Kang</a>.</p>
 </li>
 <li><p>Project: Image Categorization using Kernel Methods.</p>
 </li></ul>
 </li>
-<li><p>04/2009 - 06/2009, Internship student at <a href="http://www.toyota-ti.ac.jp/">Toyota Technological Institute of Nagoya, Japan</a>.</p>
+<li><p>04/2009 - 06/2009, Internship student at <a href="http://www.toyota-ti.ac.jp/" target=&ldquo;blank&rdquo;>Toyota Technological Institute of Nagoya, Japan</a>.</p>
 <ul>
-<li><p>Supervisor: <a href="http://www.ttic.edu/mita.php">Professor Seiichi Mita</a>, Dr. Son T. Tran.</p>
+<li><p>Supervisor: <a href="http://www.ttic.edu/mita.php" target=&ldquo;blank&rdquo;>Professor Seiichi Mita</a>, Dr. Son T. Tran.</p>
 </li>
 <li><p>Project: Autonomous driving system (Module: Real time traffic sign detection).</p>
 </li>
@@ -131,7 +131,7 @@ My CV is <a href="https://www.dropbox.com/s/84prl5ncs040nz4/TamLe_CV_2017Apr.pdf
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-08-10 16:23:12 JST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-05-30 13:29:36 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
