--- a/code.html
+++ b/code.html
@@ -22,11 +22,11 @@
 <h1>Tam Le - Code</h1>
 </div>
 <ul>
-<li><p><a href="https://sites.google.com/site/lttamvn/research/generalized-aitchison-embeddings">Generalized Aitchison Embeddings for Histograms</a>. (ACML 2013 &amp; MLJ 2014)</p>
+<li><p><a href="https://sites.google.com/site/lttamvn/research/generalized-aitchison-embeddings" target=&ldquo;blank&rdquo;>Generalized Aitchison Embeddings for Histograms</a>. (ACML 2013 &amp; MLJ 2014)</p>
 </li>
-<li><p><a href="https://sites.google.com/site/lttamvn/research/object-category">Hierarchical Spatial Matching Kernel for Image Categorization</a>. (ICIAR 2011 &amp; IIEEJ 2013)</p>
+<li><p><a href="https://sites.google.com/site/lttamvn/research/object-category" target=&ldquo;blank&rdquo;>Hierarchical Spatial Matching Kernel for Image Categorization</a>. (ICIAR 2011 &amp; IIEEJ 2013)</p>
 </li>
-<li><p><a href="https://sites.google.com/site/lttamvn/research/traffic-sign-detection">Realtime traffic sign detection using color and shape-based features</a>. (ACIIDS 2010)</p>
+<li><p><a href="https://sites.google.com/site/lttamvn/research/traffic-sign-detection" target=&ldquo;blank&rdquo;>Realtime traffic sign detection using color and shape-based features</a>. (ACIIDS 2010)</p>
 </li>
 </ul>
 <h3>Notes</h3>
@@ -34,7 +34,7 @@
 <p>The code is supplied &ldquo;as is&rdquo; without warranty of any kind, and the author(s) disclaim any and all warranties, including but not limited to any implied warranties of merchantability and fitness for a particular purpose, and any warranties or non infringement. The user assumes all liability and responsibility for use of the code, and in no event shall the author(s) be liable for damages of any kind resulting from its use.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-08-10 16:23:11 JST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-05-30 13:29:36 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
