--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </div>
 <table class="imgtable"><tr><td>
 <a href="TamLe.jpg"><img src="TamLe.jpg" alt="Tam Le" width="150px" height="150px" /></a>&nbsp;</td>
-<td align="left"><p>Tam Le
-(a.k.a. Le Thanh Tam)
+<td align="left"><p>Tam Le <br />
+(a.k.a. Lê Thanh Tâm) <br />
 Postdoctoral Researcher <br />
 <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>. <br /></p>
 </td></tr></table>
@@ -131,7 +131,7 @@ My CV is <a href="https://www.dropbox.com/s/84prl5ncs040nz4/TamLe_CV_2017Apr.pdf
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 13:29:36 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 13:32:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
