--- a/index.html
+++ b/index.html
@@ -23,37 +23,43 @@
 </div>
 <table class="imgtable"><tr><td>
 <a href="TamLe.jpg"><img src="TamLe.jpg" alt="Tam Le" width="150px" height="150px" /></a>&nbsp;</td>
-<td align="left"><p>Tam Le <br />
-(a.k.a. Lê Thanh Tâm) <br />
+<td align="left"><p>(a.k.a. Lê Thanh Tâm) <br />
 Postdoctoral Researcher <br />
 <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>. <br /></p>
 </td></tr></table>
-<p>Research interests: machine learning, convex optimization, parametric optimization, metric learning, kernel methods, geometry-aware learning for histograms, material informatics. <br /></p>
+<p>Research interests: Riemannian manifold, optimal transport/Wasserstein geometry, geometry in machine learning, topological data analysis, kernel methods, parametric optimization, metric learning. <br /></p>
 <h2>Contact</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Nagoya Institute of Technology. <br />
-Building 2, Room 409A, <br />
-Gokiso-cho, Showa-ku, Nagoya, Aichi, 466-8555, Japan.</p>
+<p>RIKEN AIP (Kyoto University office) <br />
+Artificial Intelligence Research Unit <br />
+Graduate School of Informatics, Kyoto University <br />
+Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 </div></div>
-<p>Email: tam.le[<i>at</i>]nitech.ac.jp or lttam.vn[<i>at</i>]gmail.com <br />
-My CV is <a href="https://www.dropbox.com/s/84prl5ncs040nz4/TamLe_CV_2017Apr.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated April, 2017.</p>
+<p>Email: tam.le[<i>at</i>]riken.jp or lttam.vn[<i>at</i>]gmail.com <br />
+My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated April, 2019.</p>
 <h2>News</h2>
 <ul>
-<li><p>05-Apr-2017, Our proposal has been accepted by the Grants-in-Aid for Young Scientists (B) as PI (2017-2019).</p>
+<li><p>25-Apr-2019, Python code for our <a href="https://icml.cc/" target=&ldquo;blank&rdquo;>ICML&rsquo;19</a> (Safe Grid Search with Optimal Complexity) is available <a href="https://github.com/lttam/safe_grid_search" target=&ldquo;blank&rdquo;>[Github]</a>, coded by Eugene Ndiaye.</p>
 </li>
+<li><p>22-Apr-2019, Our paper, entitled <a href="https://arxiv.org/pdf/1810.05471.pdf" target=&ldquo;blank&rdquo;>&ldquo;Safe Grid Search with Optimal Complexity&rdquo;</a> has been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;>ICML&rsquo;19</a>. This is joint work with Eugene Ndiaye, Olivier Fercoq, Joseph Salmon and Ichiro Takeuchi.</p>
+</li>
+<li><p>19-Oct-2018, Matlab code v0.1 for Persistence Fisher distance (Fisher information metric between two persistence diagrams with or without Fast Gauss Transform) is available <a href="https://github.com/lttam/PersistenceFisher" target=&ldquo;blank&rdquo;>[Github]</a>.</p>
+</li>
+<li><p>05-Sep-2018, Our paper, entitled <a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;>&ldquo;Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams&rdquo;</a> has been accepted to <a href="https://nips.cc" target=&ldquo;blank&rdquo;>NeurIPS&rsquo;18</a>!  </p>
+</li>
+<li><p>01-Sep-2017, Join in High-Dimensional Statistical Unit, RIKEN AIP as a postdoctoral researcher.</p>
+</li>
+<li><p>05-Apr-2017, Our proposal has been accepted by the Grants-in-Aid for Young Scientists (B) as PI (04<i>2017 - 03</i>2020).</p>
+</li>
+</ul>
+<ul>
 <li><p>02-Jun-2006, <a href="https://www.dropbox.com/s/o6nrtzh39si8u7p/TamLe_NIMS_June2016.pdf?dl=0" target=&ldquo;blank&rdquo;>Slide</a> for my talk at NIMS.</p>
-</li>
-<li><p>01-Jun-2016, Talk at <a href="http://www.nims.go.jp/MII-I/event/h6g4rf000000034y-att/h6g4rf000000036n.pdf" target=&ldquo;blank&rdquo;>MI2I open seminar series at NIMS, Japan</a>. </p>
-</li>
-<li><p>01-Feb-16, start to work as a Postdoctoral Researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>NITECH</a> and <a href="http://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>NIMS</a>.</p>
-</li>
-<li><p>01-Jan-16, start to work as an Associate Researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>NITECH</a>.</p>
 </li>
 </ul>
 <h2>Research Support</h2>
 <ul>
-<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS grant</a> (Grants-in-Aid for Young Scientists (B) as PI). </p>
+<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K12745</a> (Grants-in-Aid for Young Scientists (B) as PI). </p>
 </li>
 </ul>
 <h2>Education</h2>
@@ -131,7 +137,7 @@ My CV is <a href="https://www.dropbox.com/s/84prl5ncs040nz4/TamLe_CV_2017Apr.pdf
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 13:32:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 13:46:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
