--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Postdoctoral Researcher <br />
 <h2>Contact</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>RIKEN AIP (Kyoto University office) <br />
+<p>RIKEN AIP (Kyoto University Office) <br />
 Artificial Intelligence Research Unit <br />
 Graduate School of Informatics, Kyoto University <br />
 Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
@@ -53,32 +53,26 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <li><p>05-Apr-2017, Our proposal has been accepted by the Grants-in-Aid for Young Scientists (B) as PI (04<i>2017 - 03</i>2020).</p>
 </li>
 </ul>
-<ul>
-<li><p>02-Jun-2006, <a href="https://www.dropbox.com/s/o6nrtzh39si8u7p/TamLe_NIMS_June2016.pdf?dl=0" target=&ldquo;blank&rdquo;>Slide</a> for my talk at NIMS.</p>
-</li>
-</ul>
 <h2>Research Support</h2>
 <ul>
-<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K12745</a> (Grants-in-Aid for Young Scientists (B) as PI). </p>
+<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K1274</a> (Grants-in-Aid for Young Scientists (B) as PI). </p>
 </li>
 </ul>
 <h2>Education</h2>
 <ul>
-<li><p>10/2012 - 09/2015, Doctor of Informatics (Ph.D) at <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Graduate school of Informatics</a>, <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>. [<a href="http://en.wikipedia.org/wiki/Kyoto_University#Academic_rankings" target=&ldquo;blank&rdquo;><b>Ranking</b></a>]</p>
+<li><p>10/2012 - 09/2015, PhD program, <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Graduate school of Informatics</a>, <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>. [<a href="http://en.wikipedia.org/wiki/Kyoto_University#Academic_rankings" target=&ldquo;blank&rdquo;><b>Ranking</b></a>]</p>
 <ul>
-<li><p>Supervisors: <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/cuturi/" target=&ldquo;blank&rdquo;>Professor <b>Marco</b> <b>Cuturi</b></a>, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Professor <b>Akihiro</b> <b>Yamamoto</b></a>.</p>
+<li><p>Supervisors: <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;>Professor <b>Marco</b> <b>Cuturi</b></a>, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Professor <b>Akihiro</b> <b>Yamamoto</b></a>.</p>
 </li>
-<li><p>Thesis: Geometry-aware learning algorithms for histogram data using adaptive metric embeddings and kernel functions. [<a href="http://repository.kulib.kyoto-u.ac.jp/dspace/bitstream/2433/204594/2/djohk00596.pdf" target=&ldquo;blank&rdquo;>PDF</a>]</p>
-</li>
-<li><p>I officially received my PhD degree in January, 2016.</p>
+<li><p>I completed my PhD program in September, 2015 and officially received my PhD degree in January, 2016.</p>
 </li></ul>
 </li>
-<li><p>09/2008 - 05/2011, Master of Science (M.Sc) in computer science, <a href="http://www.fit.hcmus.edu.vn/" target=&ldquo;blank&rdquo;>University of Science, VNU-HCM</a>.</p>
+<li><p>09/2008 - 05/2011, MSc program, <a href="http://www.fit.hcmus.edu.vn/" target=&ldquo;blank&rdquo;>Vietnam National University, HCMC (University of Science), Vietnam</a>.</p>
 <ul>
 <li><p>Rank: <b>1/100+</b></p>
 </li></ul>
 </li>
-<li><p>09/2004 - 09/2008, Bachelor of Science (B.Sc) in computer science, <a href="http://www.fit.hcmus.edu.vn/" target=&ldquo;blank&rdquo;>University of Science, VNU-HCM</a> (<b><i>honor</i></b> <b><i>program</i></b>).</p>
+<li><p>09/2004 - 09/2008, BSc program, <a href="http://www.fit.hcmus.edu.vn/" target=&ldquo;blank&rdquo;>Vietnam National University, HCMC (University of Science), Vietnam</a> (<b><i>honor</i></b> <b><i>program</i></b>).</p>
 <ul>
 <li><p>Rank: <b>3/36</b> (<i>honor</i> <i>program</i>) &amp; <b>3/550+</b> (<i>faculty</i>)</p>
 </li>
@@ -88,45 +82,49 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 </ul>
 <h2>Research Experience</h2>
 <ul>
-<li><p>2/2016 - present, Postdoctoral Researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Takeuchi-Karasuyama laboratory, Nagoya Institute of Technology, Japan</a>.</p>
+<li><p>9/2017 - present, Postdoctoral Researcher, <a href="http://www.riken.jp/en/research/labs/aip/generic_tech/highdim_stat_model/" target=&ldquo;blank&rdquo;>High-Dimensional Statistical Modeling Unit</a>, Generic Technology Research Group, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
+</li>
+<li><p>2/2016 - 8/2017, Postdoctoral Researcher, <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology, Japan</a> and <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>.</p>
 <ul>
 <li><p>Supervisors: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Professor Ichiro Takeuchi</a>.</p>
 </li></ul>
 </li>
 <li><p>2/2016 - present, Postdoctoral Researcher at <a href="http://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>.</p>
 </li>
-<li><p>1/2016, Associate Researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Takeuchi-Karasuyama laboratory, Nagoya Institute of Technology, Japan</a>.</p>
+<li><p>1/2016, Associate Researcher, <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology, Japan</a>.</p>
 <ul>
-<li><p>Supervisors: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Professor Ichiro Takeuchi</a>.</p>
+<li><p>Mentor: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Professor Ichiro Takeuchi</a>.</p>
 </li></ul>
 </li>
-<li><p>10/2015 - 12/2015, Associate Researcher at <a href="http://www.iip.ist.i.kyoto-u.ac.jp/index-e.html" target=&ldquo;blank&rdquo;>Yamamoto-Cuturi laboratory, Graduate School of Informatics, Kyoto University, Japan</a>.</p>
+<li><p>10/2015 - 12/2015, Associate Researcher, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/index-e.html" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>.</p>
 <ul>
-<li><p>Supervisors: <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Professor Akihiro Yamamoto</a>, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/cuturi/" target=&ldquo;blank&rdquo;>Professor Marco Cuturi</a>.</p>
+<li><p>Mentors: <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Professor Akihiro Yamamoto</a>, <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;>Professor Marco Cuturi</a>.</p>
 </li></ul>
 </li>
-<li><p>01/2014 - 02/2014, Internship student at <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.</p>
+<li><p>01/2014 - 02/2014, Internship student, <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.</p>
 <ul>
-<li><p>Supervisor: <a href="http://www.harchaoui.eu/zaid/en/page.php?category=Bio" target=&ldquo;blank&rdquo;>Dr. Zaid Harchaoui</a>.</p>
+<li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.</p>
+</li>
+<li><p>Subject: Ground metric learning</p>
 </li></ul>
 </li>
 <li><p>03/2013, Internship student at <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.</p>
 <ul>
-<li><p>Supervisor: <a href="http://www.harchaoui.eu/zaid/en/page.php?category=Bio" target=&ldquo;blank&rdquo;>Dr. Zaid Harchaoui</a>.</p>
+<li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.</p>
 </li>
 <li><p>Subject: Some methods in optimization and machine learning.</p>
 </li></ul>
 </li>
-<li><p>08/2010 - 02/2011, Internship student at <a href="http://www.nii.ac.jp/en/" target=&ldquo;blank&rdquo;>National Institute of Informatics, Tokyo, Japan</a>.</p>
+<li><p>08/2010 - 02/2011, Internship student, <a href="http://www.nii.ac.jp/en/" target=&ldquo;blank&rdquo;>National Institute of Informatics, Tokyo, Japan</a>.</p>
 <ul>
-<li><p>Supervisor: <a href="http://www.nii.ac.jp/en/faculty/digital_content/sugimoto_akihiko/" target=&ldquo;blank&rdquo;>Professor Akihiro Sugimoto</a>, <a href="http://researchmap.jp/yskang/?lang=english" target=&ldquo;blank&rdquo;>Dr. Yousun Kang</a>.</p>
+<li><p>Supervisor: <a href="http://research.nii.ac.jp/~sugimoto/" target=&ldquo;blank&rdquo;>Professor Akihiro Sugimoto</a></p>
 </li>
 <li><p>Project: Image Categorization using Kernel Methods.</p>
 </li></ul>
 </li>
-<li><p>04/2009 - 06/2009, Internship student at <a href="http://www.toyota-ti.ac.jp/" target=&ldquo;blank&rdquo;>Toyota Technological Institute of Nagoya, Japan</a>.</p>
+<li><p>04/2009 - 06/2009, Internship student, <a href="http://www.toyota-ti.ac.jp/" target=&ldquo;blank&rdquo;>Toyota Technological Institute of Nagoya, Japan</a>.</p>
 <ul>
-<li><p>Supervisor: <a href="http://www.ttic.edu/mita.php" target=&ldquo;blank&rdquo;>Professor Seiichi Mita</a>, Dr. Son T. Tran.</p>
+<li><p>Supervisor: <a href="http://www.ttic.edu/mita.php" target=&ldquo;blank&rdquo;>Professor Seiichi Mita</a></p>
 </li>
 <li><p>Project: Autonomous driving system (Module: Real time traffic sign detection).</p>
 </li>
@@ -137,7 +135,7 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 13:46:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 14:00:38 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
