--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <h2>Research Experience</h2>
 <ul>
 <li><p>9/2017 - present, Postdoctoral Researcher, <a href="http://www.riken.jp/en/research/labs/aip/generic_tech/highdim_stat_model/" target=&ldquo;blank&rdquo;>High-Dimensional Statistical Modeling Unit</a>, Generic Technology Research Group, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
+<ul>
+<li><p>Mentor: <a href="https://riken-yamada.github.io/profile.html" target=&ldquo;blank&rdquo;>Professor Makoto Yamada</a></p>
+</li></ul>
 </li>
 <li><p>2/2016 - 8/2017, Postdoctoral Researcher, <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology, Japan</a> and <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>.</p>
 <ul>
-<li><p>Supervisors: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Professor Ichiro Takeuchi</a>.</p>
+<li><p>Mentor: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Professor Ichiro Takeuchi</a>.</p>
 </li></ul>
-</li>
-<li><p>2/2016 - present, Postdoctoral Researcher at <a href="http://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>.</p>
 </li>
 <li><p>1/2016, Associate Researcher, <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology, Japan</a>.</p>
 <ul>
@@ -135,7 +136,7 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 14:00:38 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 14:03:03 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
