--- a/publication.html
+++ b/publication.html
@@ -21,22 +21,55 @@
 <div id="toptitle">
 <h1>Tam Le - Publications</h1>
 </div>
-<h2>Journal Articles</h2>
+<h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p>Tam Le, Marco Cuturi, <i>Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</i>, Machine Learning Journal (<b>MLJ</b>), 2014. [<a href="http://link.springer.com/article/10.1007%2Fs10994-014-5446-z" target=&ldquo;blank&rdquo;>SPRINGER</a>/<a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>/<a href="https://www.dropbox.com/s/z0xqz1z19b1sfvz/TL.MC.MLJ14.bib?dl=0" target=&ldquo;blank&rdquo;>Bibtex</a>]</p>
+<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i><b>Safe Grid Search with Optimal Complexity</b></i>, to appear in International Conference on Machine Learning (<b>ICML</b>), US, 2019. [<a href="https://arxiv.org/abs/1810.05471" target=&ldquo;blank&rdquo;>ArXiv</a>/<a href="https://github.com/lttam/safe_grid_search" target=&ldquo;blank&rdquo;>Code</a>] (Acceptance rate: 773/3424=22.6%)</p>
 </li>
-<li><p>Tam Le, Yousun Kang, Akihiro Sugimoto, <i>Image Categorization Using Hierarchical Spatial Matching Kernel</i>, Journal of the Institute of Image Electronics Engineers of Japan (IIEEJ), Vol. 42, No. 2, 2013. [<a href="https://sites.google.com/site/tamtle85/hsmk-code/TL.YK.AS-HSMK-IIEEJ13.pdf?attredirects=0" target=&ldquo;blank&rdquo;>PDF</a>/<a href="https://sites.google.com/site/tamtle85/hsmk-code/TamLe13IIEEJ.bib?attredirects=0" target=&ldquo;blank&rdquo;>Bibtex</a>]</p>
+<li><p><b>Tam Le</b>, Makoto Yamada, <i><b>Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</b></i>, The 32nd Conference on Neural Information Processing Systems (<b>NeurIPS<i>NIPS</b>), Canada, 2018. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] (Acceptance rate: 1011</i>4856=20.8%)</p>
+</li>
+<li><p><b>Tam Le</b>, Marco Cuturi, <i><b>Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</b></i>, International Conference on Machine Learning (<b>ICML</b>), France, 2015. [[http:<i></i>videolectures.net<i>icml2015<u>le</u>histograms</i>?q=Tam<tt>20Le Video]\\/[http://proceedings.mlr.press/v37/le15.pdf PDF]\\/[http://proceedings.mlr.press/v37/le15-supp.pdf Supplemental]\\/[https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0 SLIDE]\\/[https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0 POSTER]\\] (Acceptance rate: 270/1037 = 26.0</tt>)</p>
+</li>
+<li><p><b>Tam Le</b>, Marco Cuturi, <i><b>Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</b></i>, Machine Learning Journal (<b>MLJ</b>), 2014. [<a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>]</p>
 </li>
 </ul>
-<h2>Conference Papers</h2>
+<h2>Preprints / Technical reports</h2>
 <ul>
-<li><p>Tam Le, Marco Cuturi, <i>Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</i>, <a href="http://icml.cc/2015/" target=&ldquo;blank&rdquo;>International Conference on Machine Learning</a> (<b>ICML</b>), France, 2015. [<a href="http://videolectures.net/icml2015_le_histograms/?q=Tam%20Le" target=&ldquo;blank&rdquo;>VideoLecture</a>/<a href="http://jmlr.org/proceedings/papers/v37/le15.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://jmlr.org/proceedings/papers/v37/le15-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>/<a href="https://www.dropbox.com/s/nsy9sw54pb3hf6r/TL.MC.ICML15.bib?dl=0" target=&ldquo;blank&rdquo;>Bibtex</a>] (Acceptance rate: <b>270/1037 = 26%</b>)</p>
+<li><p><b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi, Tree-Sliced Variants of Wasserstein Distances, ArXiv 1902.00342 <a href="ArXiv" target=&ldquo;blank&rdquo;>ArXiv</a></p>
 </li>
-<li><p>Tam Le, Marco Cuturi, <i>Generalized Aitchison Embeddings for Histograms</i>, <a href="http://acml2013.conference.nicta.com.au" target=&ldquo;blank&rdquo;>The 5th Asian Conference on Machine Learning</a> (<b>ACML</b>), JMLR v29, Canberra, Australia, 2013 (<i>oral</i>). [<a href="http://jmlr.org/proceedings/papers/v29/Le13.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="https://sites.google.com/site/tamtle85/acml13/TamLe_ACML13.pdf?attredirects=0&amp;d=1" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://sites.google.com/site/tamtle85/acml13/TLMC.ACML13.bib?attredirects=0&amp;d=1" target=&ldquo;blank&rdquo;>Bibtex</a>] (Acceptance rate: 31%, oral paper rate <b>9.7%</b>)</p>
+<li><p>Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada, Topological Bayesian Optimization with Persistence Diagrams,  ArXiv 1902.09722  <a href="ArXiv" target=&ldquo;blank&rdquo;>ArXiv</a></p>
 </li>
-<li><p>Tam Le, Yousun Kang, Akihiro Sugimoto, Son Tran, Thuc Nguyen, <i>Hierarchical Spatial Matching Kernel for Image Categorization</i>, <a href="http://www.iciar.uwaterloo.ca/iciar11/" target=&ldquo;blank&rdquo;>International Conference on Image Processing and Recognition</a> (ICIAR), LNCS 6753, Burnaby, BC, Canada, 2011 (<i>oral</i>). [<a href="https://sites.google.com/site/lttamvn/research/object-category/TamTLe-ICIAR11-HSMK.pdf?attredirects=0" target=&ldquo;blank&rdquo;>PDF</a>/<a href="https://sites.google.com/site/lttam85/Home/TamLe-HSMK-ICIAR11.pdf?attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://sites.google.com/site/lttamvn/research/object-category/TamLe-ICIAR11.bib?attredirects=0" target=&ldquo;blank&rdquo;>Bibtex</a>] (Acceptance rate: 57%, oral paper rate: <b>25%</b>)</p>
+</ul>
+<h2>Other Journals / Conference papers</h2>
+<ul>
+<li><p>Randy Jalem, Masanobu Nakayama, Yusuke Noda, <b>Tam Le</b>, Ichiro Takeuchi, Yoshitaka Tateyama, Hisatsugu Yamazaki, A General Representation Scheme for Crystalline Solids based on Voronoi-Tessellation Real Feature Values and Atomic Property Data, Science and Technology of Advance Materials Journal, 2018. <a href="PDF" target=&ldquo;blank&rdquo;>PDF</a></p>
 </li>
-<li><p>Tam Le, Son Tran, Seichii Mita, Thuc Nguyen, <i>Realtime Traffic Sign Detection Using Color and Shape-Based Features</i>, <a href="http://aciids2010.hueuni.edu.vn" target=&ldquo;blank&rdquo;>The 2nd Asian Conference on Intelligent Information and Database Systems</a> (ACIIDS), LNAI 5991, Hue, Vietnam, 2010 (<i>oral</i>). [<a href="https://sites.google.com/site/lttamvn/research/traffic-sign-detection/ACIIDS00-LTTam-prePrint.pdf?attredirects=0" target=&ldquo;blank&rdquo;>PDF</a>/<a href="https://sites.google.com/site/lttamvn/research/traffic-sign-detection/ACIIDS-Slidev1.0.pptx?attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://sites.google.com/site/lttamvn/research/traffic-sign-detection/TamTLe-ACIIDS10.bib?attredirects=0" target=&ldquo;blank&rdquo;>Bibtex</a>]</p>
+<li><p><b>Tam Le</b>, Marco Cuturi, Generalized Aitchison Embeddings for Histograms, The 5th Asian Conference on Machine Learning (ACML), JMLR vol.29, Australia, 2013 (oral). <a href="PDF/SLIDE/PROJECT" target=&ldquo;blank&rdquo;>PDF/SLIDE/PROJECT</a> (Acceptance rate: 31<tt>, oral paper rate: 9.7</tt>)</p>
+</li>
+<li><p><b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto, Image Categorization Using Hierarchical Spatial Matching Kernel, Journal of the Institute of Image Electronics Engineers of Japan (IIEEJ), Vol. 42, No. 2, 2013. <a href="PDF/PROJECT" target=&ldquo;blank&rdquo;>PDF/PROJECT</a></p>
+</li>
+<li><p><b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto, Son Tran, Thuc Nguyen, Hierarchical Spatial Matching Kernel for Image Categorization, International Conference on Image Processing and Recognition (ICIAR), LNCS 6753, Canada, 2011 (oral). <a href="PDF/SLIDE/PROJECT" target=&ldquo;blank&rdquo;>PDF/SLIDE/PROJECT</a> (Acceptance rate: 57<tt>, oral paper rate: 25</tt>)</p>
+</li>
+<li><p><b>Tam Le</b>, Son Tran, Seichii Mita, Thuc Nguyen, Realtime Traffic Sign Detection Using Color and Shape-Based Features, The 2nd Asian Conference on Intelligent Information and Database Systems (ACIIDS), LNAI 5991, Vietnam, 2010 (oral). <a href="PDF/SLIDE/PROJECT" target=&ldquo;blank&rdquo;>PDF/SLIDE/PROJECT</a></p>
+</li>
+</ul>
+<h2>Thesis</h2>
+<ul>
+<li><p>Geometry-Aware Learning Algorithms for Histogram Data Using Adaptive Metric Embeddings and Kernel Functions, PhD thesis, Kyoto University, Japan, 2015. <a href="PDF" target=&ldquo;blank&rdquo;>PDF</a></p>
+</li>
+</ul>
+<h2>Workshop Posters</h2>
+<ul>
+<li><p>2019, Tree-Sliced Approximation of Wasserstein Distances, Korea-Japan Machine Learning workshop, Korea. <a href="Poster" target=&ldquo;blank&rdquo;>Poster</a></p>
+</li>
+<li><p>2019, Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams, Korea-Japan Machine Learning workshop, Korea.</p>
+</li>
+<li><p>2018, Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams, ICML workshops (Geometry in Machine Learning), Sweden. <a href="PDF" target=&ldquo;blank&rdquo;>/ a longer version at NIPS&rsquo;18</a></p>
+</li>
+<li><p>2018, Riemannian Manifold Kernel for Persistence Diagrams, Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization, USA. </p>
+</li>
+<li><p>Eugene Ndiaye, Tam Le, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, Optimal Approximation for regularization and validation path. Journees SMAI MODE, France, 2018.</p>
+</li>
+<li><p>Eugene Ndiaye, Tam Le, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, GridSearch: Complexite et Garantie pour la Validation (GridSearch: Complexity and Guarantee for Validation). Conference Sur L'Apprentissage Automatique (CAp), France, 2018.</p>
 </li>
 </ul>
 <h2>Talks</h2>
@@ -54,7 +87,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 14:07:01 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 14:23:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
