--- a/publication.html
+++ b/publication.html
@@ -25,9 +25,9 @@
 <ul>
 <li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i><b>Safe Grid Search with Optimal Complexity</b></i>, to appear in International Conference on Machine Learning (<b>ICML</b>), US, 2019. [<a href="https://arxiv.org/abs/1810.05471" target=&ldquo;blank&rdquo;>ArXiv</a>/<a href="https://github.com/lttam/safe_grid_search" target=&ldquo;blank&rdquo;>Code</a>] (Acceptance rate: 773/3424=22.6%)</p>
 </li>
-<li><p><b>Tam Le</b>, Makoto Yamada, <i><b>Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</b></i>, The 32nd Conference on Neural Information Processing Systems (<b>NeurIPS<i>NIPS</b>), Canada, 2018. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] (Acceptance rate: 1011</i>4856=20.8%)</p>
+<li><p><b>Tam Le</b>, Makoto Yamada, <i><b>Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</b></i>, The 32nd Conference on Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), Canada, 2018. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] (Acceptance rate: 1011/4856=20.8%)</p>
 </li>
-<li><p><b>Tam Le</b>, Marco Cuturi, <i><b>Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</b></i>, International Conference on Machine Learning (<b>ICML</b>), France, 2015. [[http:<i></i>videolectures.net<i>icml2015<u>le</u>histograms</i>?q=Tam<tt>20Le Video]\\/[http://proceedings.mlr.press/v37/le15.pdf PDF]\\/[http://proceedings.mlr.press/v37/le15-supp.pdf Supplemental]\\/[https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0 SLIDE]\\/[https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0 POSTER]\\] (Acceptance rate: 270/1037 = 26.0</tt>)</p>
+<li><p><b>Tam Le</b>, Marco Cuturi, <i><b>Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</b></i>, International Conference on Machine Learning (<b>ICML</b>), France, 2015. [<a href="http://videolectures.net/icml2015_le_histograms/?q=Tam\\%20Le" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v37/le15.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://proceedings.mlr.press/v37/le15-supp.pdf" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] (Acceptance rate: 270/1037 = 26.0%)</p>
 </li>
 <li><p><b>Tam Le</b>, Marco Cuturi, <i><b>Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</b></i>, Machine Learning Journal (<b>MLJ</b>), 2014. [<a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>]</p>
 </li>
@@ -87,7 +87,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 14:23:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 14:26:43 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
