--- a/publication.html
+++ b/publication.html
@@ -34,60 +34,60 @@
 </ul>
 <h2>Preprints / Technical reports</h2>
 <ul>
-<li><p><b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi, Tree-Sliced Variants of Wasserstein Distances, ArXiv 1902.00342 <a href="ArXiv" target=&ldquo;blank&rdquo;>ArXiv</a></p>
+<li><p><b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi, <i><b>Tree-Sliced Variants of Wasserstein Distances</b></i>, ArXiv 1902.00342 [<a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;>ArXiv</a>]</p>
 </li>
-<li><p>Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada, Topological Bayesian Optimization with Persistence Diagrams,  ArXiv 1902.09722  <a href="ArXiv" target=&ldquo;blank&rdquo;>ArXiv</a></p>
+<li><p>Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada, <i><b>Topological Bayesian Optimization with Persistence Diagrams</b></i>, ArXiv 1902.09722 [<a href="https://arxiv.org/pdf/1902.09722.pdf" target=&ldquo;blank&rdquo;>ArXiv</a>]</p>
 </li>
 </ul>
 <h2>Other Journals / Conference papers</h2>
 <ul>
-<li><p>Randy Jalem, Masanobu Nakayama, Yusuke Noda, <b>Tam Le</b>, Ichiro Takeuchi, Yoshitaka Tateyama, Hisatsugu Yamazaki, A General Representation Scheme for Crystalline Solids based on Voronoi-Tessellation Real Feature Values and Atomic Property Data, Science and Technology of Advance Materials Journal, 2018. <a href="PDF" target=&ldquo;blank&rdquo;>PDF</a></p>
+<li><p>Randy Jalem, Masanobu Nakayama, Yusuke Noda, <b>Tam Le</b>, Ichiro Takeuchi, Yoshitaka Tateyama, Hisatsugu Yamazaki, <i><b>A General Representation Scheme for Crystalline Solids based on Voronoi-Tessellation Real Feature Values and Atomic Property Data</b></i>, Science and Technology of Advance Materials Journal, 2018. [[https:<i></i>www.tandfonline.com<i>doi</i>full<i>10.1080</i>14686996.2018.1439253</p>
 </li>
-<li><p><b>Tam Le</b>, Marco Cuturi, Generalized Aitchison Embeddings for Histograms, The 5th Asian Conference on Machine Learning (ACML), JMLR vol.29, Australia, 2013 (oral). <a href="PDF/SLIDE/PROJECT" target=&ldquo;blank&rdquo;>PDF/SLIDE/PROJECT</a> (Acceptance rate: 31<tt>, oral paper rate: 9.7</tt>)</p>
+<li><p><b>Tam Le</b>, Marco Cuturi, <i><b>Generalized Aitchison Embeddings for Histograms</b></i>, The 5th Asian Conference on Machine Learning (ACML), JMLR vol.29, Australia, 2013 (oral). [<a href="http://proceedings.mlr.press/v29/Le13.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/acml13/TamLe_ACML13.pdf?attachauth=ANoY7co0ctNrM6IGtGy7-HUUGaF_jZNDALnhKuyeXTvrvnRFksIGZaEm5xtXaqY8o92WUlHWgomz46LrFTNuAxHpyH260KPc9qFskG75521q96T1aVUXrtSSJsMZowtTBxFO5cMtu6l4GYPQT-rsx97SfSU8QxMoGN-ik17jgZyKGNqWVINs36qZ7VDnUYopGTOi0_vMOKI5AHjMnjTEm_yWp9VdkJcA05GFzRhsNpNJqZewg222Sqo%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] (Acceptance rate: 31%, oral paper rate: 9.7%)</p>
 </li>
-<li><p><b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto, Image Categorization Using Hierarchical Spatial Matching Kernel, Journal of the Institute of Image Electronics Engineers of Japan (IIEEJ), Vol. 42, No. 2, 2013. <a href="PDF/PROJECT" target=&ldquo;blank&rdquo;>PDF/PROJECT</a></p>
+<li><p><b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto, <i><b>Image Categorization Using Hierarchical Spatial Matching Kernel</b></i>, Journal of the Institute of Image Electronics Engineers of Japan (IIEEJ), Vol. 42, No. 2, 2013. [<a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/hsmk-code/TL.YK.AS-HSMK-IIEEJ13.pdf?attachauth=ANoY7cptnG2XULNdwNvStBxHRF8txio8ZQk3x6EZgWSPZPNf91QFmZQAI4gI6v7o2bS48WD9Pcn-KC1VGm43cZh6E0nH_xC0jDkQ22HyVHkW7V-8NOF0cpQGaxgdxxtsQqz50Mc3PkLvMsSSCxyiGCTgUmzdycH3WiQK64E9RV6dYDItqJs-EJZbTCq9qJT6enMaItGICb7BP6M1ybUWqCMEXIBBw7JAUtmDfUZkl2auPdjT5bSEw_o%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>PDF</a>]</p>
 </li>
-<li><p><b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto, Son Tran, Thuc Nguyen, Hierarchical Spatial Matching Kernel for Image Categorization, International Conference on Image Processing and Recognition (ICIAR), LNCS 6753, Canada, 2011 (oral). <a href="PDF/SLIDE/PROJECT" target=&ldquo;blank&rdquo;>PDF/SLIDE/PROJECT</a> (Acceptance rate: 57<tt>, oral paper rate: 25</tt>)</p>
+<li><p><b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto, Son Tran, Thuc Nguyen, <i><b>Hierarchical Spatial Matching Kernel for Image Categorization</b></i>, International Conference on Image Processing and Recognition (ICIAR), LNCS 6753, Canada, 2011 (oral). [<a href="https://www.dropbox.com/s/4bqrsuzn9as0tix/TamLe-ICIAR11.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>/<a href="https://f2496fb7-a-62cb3a1a-s-sites.googlegroups.com/site/lttam85/Home/TamLe-HSMK-ICIAR11.pdf?attachauth=ANoY7crjZ3Vt6hzUNYaDrFcbxZa7jywngZ-KX3FDN8uMs7NLsMbGWBOp122P29kFrRmXAgYLVtN6VKr-TksXj7p_XUSOyo_WDfmjl_6xRsFR-Cf3OTCfrdyLoGvODtRi7i5xS3L0j1jKiAf-EncSOtNba7Qaq1EL46LaG9rLERKLvr39AeOSKb8MVy5oN2o-mW0PMEwIfDW8p8jIUPR_XBAqg2hpJoJSMKOtzihdKDvTMGuhBiniQIk%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] (Acceptance rate: 57%, oral paper rate: 25%)</p>
 </li>
-<li><p><b>Tam Le</b>, Son Tran, Seichii Mita, Thuc Nguyen, Realtime Traffic Sign Detection Using Color and Shape-Based Features, The 2nd Asian Conference on Intelligent Information and Database Systems (ACIIDS), LNAI 5991, Vietnam, 2010 (oral). <a href="PDF/SLIDE/PROJECT" target=&ldquo;blank&rdquo;>PDF/SLIDE/PROJECT</a></p>
+<li><p><b>Tam Le</b>, Son Tran, Seichii Mita, Thuc Nguyen, <i><b>Realtime Traffic Sign Detection Using Color and Shape-Based Features</b></i>, The 2nd Asian Conference on Intelligent Information and Database Systems (ACIIDS), LNAI 5991, Vietnam, 2010 (oral). [<a href="https://www.dropbox.com/s/987ev6ok1dtatyj/TamLe-ACIIDS10.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>]</p>
 </li>
 </ul>
 <h2>Thesis</h2>
 <ul>
-<li><p>Geometry-Aware Learning Algorithms for Histogram Data Using Adaptive Metric Embeddings and Kernel Functions, PhD thesis, Kyoto University, Japan, 2015. <a href="PDF" target=&ldquo;blank&rdquo;>PDF</a></p>
+<li><p><i><b>Geometry-Aware Learning Algorithms for Histogram Data Using Adaptive Metric Embeddings and Kernel Functions</b></i>, PhD thesis, Kyoto University, Japan, 2015. [[https:<i></i>repository.kulib.kyoto-u.ac.jp<i>dspace</i>bitstream<i>2433</i>204594<i>2</i>djohk00596.pdf PDF]</p>
 </li>
 </ul>
 <h2>Workshop Posters</h2>
 <ul>
-<li><p>2019, Tree-Sliced Approximation of Wasserstein Distances, Korea-Japan Machine Learning workshop, Korea. <a href="Poster" target=&ldquo;blank&rdquo;>Poster</a></p>
+<li><p>2019, <i>Tree-Sliced Approximation of Wasserstein Distances</i>, Korea-Japan Machine Learning workshop, Korea. [<a href="https://www.dropbox.com/s/pym938fkamamgyo/TLMYKFMC_KJworkshop19_Tree-SlicedWasserstein.pdf?dl=0" target=&ldquo;blank&rdquo;>Poster</a>]</p>
 </li>
-<li><p>2019, Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams, Korea-Japan Machine Learning workshop, Korea.</p>
+<li><p>2019, <i>Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</i>, Korea-Japan Machine Learning workshop, Korea.</p>
 </li>
-<li><p>2018, Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams, ICML workshops (Geometry in Machine Learning), Sweden. <a href="PDF" target=&ldquo;blank&rdquo;>/ a longer version at NIPS&rsquo;18</a></p>
+<li><p>2018, <i>Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</i>, ICML workshops (Geometry in Machine Learning), Sweden. [<a href="https://www.dropbox.com/s/r6mabb120909khd/gimli_icml18_v04.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.html" target=&ldquo;blank&rdquo;>a longer version at NeurIPS/NIPS&rsquo;18</a>]</p>
 </li>
-<li><p>2018, Riemannian Manifold Kernel for Persistence Diagrams, Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization, USA. </p>
+<li><p>2018, <i>Riemannian Manifold Kernel for Persistence Diagrams*</i>, Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization, USA. </p>
 </li>
-<li><p>Eugene Ndiaye, Tam Le, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, Optimal Approximation for regularization and validation path. Journees SMAI MODE, France, 2018.</p>
+<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>Optimal Approximation for regularization and validation path</i>. Journees SMAI MODE, France, 2018.</p>
 </li>
-<li><p>Eugene Ndiaye, Tam Le, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, GridSearch: Complexite et Garantie pour la Validation (GridSearch: Complexity and Guarantee for Validation). Conference Sur L'Apprentissage Automatique (CAp), France, 2018.</p>
+<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>GridSearch: Complexite et Garantie pour la Validation (GridSearch: Complexity and Guarantee for Validation)</i>. Conference Sur L'Apprentissage Automatique (CAp), France, 2018.</p>
 </li>
 </ul>
 <h2>Talks</h2>
 <ul>
-<li><p>2016, Geometry-Aware Metric Learning for Histograms, <a href="http://www.nims.go.jp/MII-I/event/h6g4rf000000034y-att/h6g4rf000000036n.pdf" target=&ldquo;blank&rdquo;>MI2I Open Seminar Series</a>, National Institute for Materials Science, Tsukuba, Japan. [<a href="https://www.dropbox.com/s/o6nrtzh39si8u7p/TamLe_NIMS_June2016.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
+<li><p>2016, <i>Geometry-Aware Metric Learning for Histograms</i>, <a href="http://www.nims.go.jp/MII-I/event/h6g4rf000000034y-att/h6g4rf000000036n.pdf" target=&ldquo;blank&rdquo;>MI2I Open Seminar Series</a>, National Institute for Materials Science, Tsukuba, Japan. [<a href="https://www.dropbox.com/s/o6nrtzh39si8u7p/TamLe_NIMS_June2016.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
-<li><p>2015, Metric Learning for Histograms, Nagoya Institute of Technology, Japan. </p>
+<li><p>2015, <i>Metric Learning for Histograms</i>, Nagoya Institute of Technology, Japan. </p>
 </li>
-<li><p>2015, Unsupervised Riemannian Metric Learning for Histograms, Bioinformatics Center, Institute for Chemical Research, Kyoto University, Japan. </p>
+<li><p>2015, <i>Unsupervised Riemannian Metric Learning for Histograms</i>, Bioinformatics Center, Institute for Chemical Research, Kyoto University, Japan. </p>
 </li>
-<li><p>2015, Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Embeddings, IST Seminar, Graduate School of Informatics, Kyoto University, Japan. [<a href="https://www.dropbox.com/s/w4cjpjcl3c1e0hd/TamLe_IST_KYOTO_15May29.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
+<li><p>2015, <i>Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Embeddings</i>, IST Seminar, Graduate School of Informatics, Kyoto University, Japan. [<a href="https://www.dropbox.com/s/w4cjpjcl3c1e0hd/TamLe_IST_KYOTO_15May29.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
 <li><p>2014, <a href="https://lear.inrialpes.fr/seminars" target=&ldquo;blank&rdquo;>Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</a>, Lear, INRIA Rhone Alpes, Grenoble, France. [<a href="https://www.dropbox.com/s/ub8ctmh3a0ksk4l/TamLe_LearINRIA14Feb07.pdf" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 14:26:43 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 14:40:51 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
