--- a/publication.html
+++ b/publication.html
@@ -59,17 +59,17 @@
 </ul>
 <h2>Workshop Posters</h2>
 <ul>
-<li><p>2019, <i>Tree-Sliced Approximation of Wasserstein Distances</i>, Korea-Japan Machine Learning workshop, Korea. [<a href="https://www.dropbox.com/s/pym938fkamamgyo/TLMYKFMC_KJworkshop19_Tree-SlicedWasserstein.pdf?dl=0" target=&ldquo;blank&rdquo;>Poster</a>]</p>
+<li><p>2019, <i>Tree-Sliced Approximation of Wasserstein Distances</i>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>, Korea. [<a href="https://www.dropbox.com/s/pym938fkamamgyo/TLMYKFMC_KJworkshop19_Tree-SlicedWasserstein.pdf?dl=0" target=&ldquo;blank&rdquo;>Poster</a>]</p>
 </li>
-<li><p>2019, <i>Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</i>, Korea-Japan Machine Learning workshop, Korea.</p>
+<li><p>2019, <i>Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</i>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>, Korea.</p>
 </li>
-<li><p>2018, <i>Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</i>, ICML workshops (Geometry in Machine Learning), Sweden. [<a href="https://www.dropbox.com/s/r6mabb120909khd/gimli_icml18_v04.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.html" target=&ldquo;blank&rdquo;>a longer version at NeurIPS/NIPS&rsquo;18</a>]</p>
+<li><p>2018, <i>Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</i>, <a href="http://gimli.cc/2018/" target=&ldquo;blank&rdquo;>ICML workshops (Geometry in Machine Learning)</a>, Sweden. [<a href="https://www.dropbox.com/s/r6mabb120909khd/gimli_icml18_v04.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.html" target=&ldquo;blank&rdquo;>a longer version at NeurIPS/NIPS&rsquo;18</a>]</p>
 </li>
-<li><p>2018, <i>Riemannian Manifold Kernel for Persistence Diagrams*</i>, Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization, USA. </p>
+<li><p>2018, <i>Riemannian Manifold Kernel for Persistence Diagrams*</i>, <a href="https://sites.google.com/view/aip-fau-mlgt-2018/home" target=&ldquo;blank&rdquo;>Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization</a>, USA. </p>
 </li>
-<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>Optimal Approximation for regularization and validation path</i>. Journees SMAI MODE, France, 2018.</p>
+<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>Optimal Approximation for regularization and validation path</i>. <a href="http://smai-mode2018.imag.fr" target=&ldquo;blank&rdquo;>Journees SMAI MODE</a>, France, 2018. [http:<i></i>smai-mode2018.imag.fr<i>resumes</i>resumesLong/subm26.pdf PDF]</p>
 </li>
-<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>GridSearch: Complexite et Garantie pour la Validation (GridSearch: Complexity and Guarantee for Validation)</i>. Conference Sur L'Apprentissage Automatique (CAp), France, 2018.</p>
+<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>GridSearch: Complexite et Garantie pour la Validation (GridSearch: Complexity and Guarantee for Validation)</i>. <a href="http://cap2018.litislab.fr/Programme-en.html" target=&ldquo;blank&rdquo;>Conference Sur L'Apprentissage Automatique (CAp)</a>, France, 2018.</p>
 </li>
 </ul>
 <h2>Talks</h2>
@@ -87,7 +87,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 14:40:51 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 14:45:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
